se agregan cambios hasta labels

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
               <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed">
                       <div class="sr-only">Bootstrap theme</div>
-                      
                   </button>
                     <a class="navbar-brand" href="#top">Bootstrap theme</a>
               </div>
@@ -47,8 +46,305 @@
           <div class="container col-md-12 jumbotron">
             <h1>Theme example</h1>
             <p class="lead">This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
-
           </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row margen-bajo">
+            <div class="page-header col-md-12">
+                <h2>Buttons</h2>
+            </div>
+        </div>
+        <div>
+            <div class="col-mn-12">
+                <button type="button" class="btn btn-lg btn-default">Default</button>
+                <button type="button" class="btn btn-lg btn-primary">Primary</button>
+                <button type="button" class="btn btn-lg btn-success">Success</button>
+                <button type="button" class="btn btn-lg btn-info">Info</button>
+                <button type="button" class="btn btn-lg btn-warning">Warning</button>
+                <button type="button" class="btn btn-lg btn-danger">Danger</button>
+                <button type="button" class="btn btn-lg btn-link">Link</button>
+            </div>
+        </div>
+        <div>
+            <div class="col-mn-12">
+              <button type="button" class="btn btn-default">Default</button>
+              <button type="button" class="btn btn-primary">Primary</button>
+              <button type="button" class="btn btn-success">Success</button>
+              <button type="button" class="btn btn-info">Info</button>
+              <button type="button" class="btn btn-warning">Warning</button>
+              <button type="button" class="btn btn-danger">Danger</button>
+              <button type="button" class="btn btn-link">Link</button>
+            </div>
+        </div>
+        <div>
+            <div class="col-mn-12">
+              <button type="button" class="btn btn-sm btn-default">Default</button>
+              <button type="button" class="btn btn-sm btn-primary">Primary</button>
+              <button type="button" class="btn btn-sm btn-success">Success</button>
+              <button type="button" class="btn btn-sm btn-info">Info</button>
+              <button type="button" class="btn btn-sm btn-warning">Warning</button>
+              <button type="button" class="btn btn-sm btn-danger">Danger</button>
+              <button type="button" class="btn btn-sm btn-link">Link</button>
+            </div>
+        </div>
+        <div>
+            <div class="col-mn-12">
+              <button type="button" class="btn btn-xs btn-default">Default</button>
+              <button type="button" class="btn btn-xs btn-primary">Primary</button>
+              <button type="button" class="btn btn-xs btn-success">Success</button>
+              <button type="button" class="btn btn-xs btn-info">Info</button>
+              <button type="button" class="btn btn-xs btn-warning">Warning</button>
+              <button type="button" class="btn btn-xs btn-danger">Danger</button>
+              <button type="button" class="btn btn-xs btn-link">Link</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+      <div>
+          <div class="page-header col-md-12">
+              <h3>Tables</h3>
+          </div>
+        </div>
+        <div>
+            <div class="col-md-6">
+              <table class="table">
+                <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>First Name</th>
+                      <th>Last Name</th>
+                      <th>Username</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Name</td>
+                        <td>Name</td>
+                        <td>@user</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Name</td>
+                        <td>Name</td>
+                        <td>@user</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Name</td>
+                        <td>Name</td>
+                        <td>@user</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-6">
+              <table class="table table-striped">
+                  <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Username</th>
+                      </tr>
+                  </thead>
+                    <tbody>
+                        <tr>
+                          <td>1</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>3</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>First Name</th>
+                      <th>Last Name</th>
+                      <th>Username</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                          <td rowspan="2">1</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>3</td>
+                          <td colspan="2">Name</td>
+                          <td>@twitter</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-6">
+                <table class="table table-condensed">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Username</th>
+                      </tr>
+                    </thead>
+
+                        <tr>
+                          <td>1</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>>
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>Name</td>
+                          <td>Name</td>
+                          <td>@user</td>
+                        </tr>
+                        <tr>
+                          <td>3</td>
+                          <td colspan="2">Name</td>
+                          <td>@twitter</td>
+                        </tr>
+
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="class=col-xs-12 col-md-12">
+        <div class="col-md-offset-2 col-xs-10 col-md-10"></div>
+            <h2>Thumbnails</h2>
+            <hr>
+            <img class="thumbnail" src="images/images.png" alt="">
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="page-header col-md-12">
+              <h3>Labels</h3>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <h1>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h1>
+          </div>
+        </div>
+
+            <div class="col-md-12">
+              <h2>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h2>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <h3>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h3>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <h4>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h4>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <h5>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h5>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <h6>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </h6>
+            </div>
+        </div>
+
+            <div class="col-md-12">
+              <p>
+                <span class="label label-default">Default</span>
+                <span class="label label-primary">Primary</span>
+                <span class="label label-success">Success</span>
+                <span class="label label-info">Info</span>
+                <span class="label label-warning">Warning</span>
+                <span class="label label-danger">Danger</span>
+              </p>
+            </div>
         </div>
     </div>
 
